--- a/user.html
+++ b/user.html
@@ -57,11 +57,20 @@
         <div class="row">
             <h2 class="h2-section" style="padding: 20px 0;">Заказы</h2>
             <div class="orders">
-                <div class="order bottom-border" id="1">
-                    <div class="col-xs-2 "><button class="button-order">Детали</button></div>
-                    <div class="col-xs-2 id-order"><p>Номер заказа <span>1</span> </p></div>
-                    <div class="col-xs-3 date-order"><p>Дата заказа <span>12:00</span> <span>12.02.2018</span></p></div>
-                    <div class="col-xs-2 status"><p>Status</p></div>
+                <div class="order bottom-border row" id="1">
+                    <div class="col-xs-2 ">
+                        <button class="button-order">Детали</button>
+                    </div>
+                    <div class="col-xs-2 id-order">
+                        <p>Номер заказа <span>1</span> </p>
+                    </div>
+                    <div class="col-xs-3 date-order">
+                        <p>Дата заказа <span>12:00</span>
+                        <span>12.02.2018</span></p>
+                    </div>
+                    <div class="col-xs-2 status">
+                        <p>Status</p>
+                    </div>
                     <div class="col-xs-2 cost-order"><p>Сумма <span>24 <artcile>Uah</artcile></span></p></div>
                     <div class="order-info">
                         <div class="info-prod" style="margin-top: 60px">
@@ -117,12 +126,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="order bottom-border" id="1">
+                <div class="order bottom-border row" id="1">
                     <div class="col-xs-2 "><button class="button-order">Детали</button></div>
                     <div class="col-xs-2 id-order"><p>Номер заказа <span>1</span> </p></div>
                     <div class="col-xs-3 date-order"><p>Дата заказа <span>12:00</span> <span>12.02.2018</span></p></div>
                     <div class="col-xs-2 status"><p>Status</p></div>
-                    <div class="col-xs-2 cost-order"><p>Сумма <span>24 <artcile>Uah</artcile></span></p></div>
+                    <div class="col-xs-2 cost-order">
+                    <p>Сумма <span>24 <artcile>Uah</artcile></span></p>
+                    </div>
                     <div class="order-info">
                         <div class="info-prod" style="margin-top: 60px">
                                 <img src="img/prod.jpg" alt="" >
